--- a/src/assets/sass/templates/_layout.scss
+++ b/src/assets/sass/templates/_layout.scss
@@ -6,3 +6,11 @@
 .govuk-breadcrumbs__list .govuk-breadcrumbs__list-item:last-child a {
   text-decoration: none;
 }
+
+.login {
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
+  gap: 0.5rem;
+  padding-right: 2rem;
+}
