fix(filters): Move styles to SCSS
`application.css` is the compiled CSS that comes from all the SCSS
files, so making any modifications in that file means they will be
removed eventually.
I have moved all of the new filter styles into the respective SCSS
file so it is correctly compiled.
By making this change, it also broke Mark's change to the base paths.
Luckily, GOVUK provides a SCSS variable that defines the base path
for the assets, so by changing that it once again points the font
to the correct place.

--- a/src/assets/sass/_root.scss
+++ b/src/assets/sass/_root.scss
@@ -1,16 +1,20 @@
-@import "govuk/all";
+// the default asset path is `/assets/fonts` but as all the apps have a bath path
+// we need to override this so the font and other assets load correctly
+$govuk-assets-path: '/natural-capital-ecosystem-assessment/assets/';
 
-@import "./settings/colors";
+@import 'govuk/all';
 
-@import "./tools/fonts";
+@import './settings/colors';
 
-@import "./components/search";
-@import "./components/results_count";
-@import "./components/modal";
+@import './tools/fonts';
 
-@import "./templates/layout";
-@import "./templates/home";
-@import "./templates/header";
-@import "./templates/geography";
-@import "./templates/results";
-@import "./templates/details";
+@import './components/search';
+@import './components/results_count';
+@import './components/modal';
+
+@import './templates/layout';
+@import './templates/home';
+@import './templates/header';
+@import './templates/geography';
+@import './templates/results';
+@import './templates/details';
