feat(frontend): Add version number to footer. 	- By reading the package.json file in views.ts, from which the version number is getting and passing that to the context. 	- Added the version number in footer section of UI, which is get from the context. 	- In production build, we required the package.json file along with the source, because version is getting from this file, hence I added the copy command for this in docker file. Issued Id: NCEA-143.

--- a/src/views/layout/default.njk
+++ b/src/views/layout/default.njk
@@ -37,7 +37,7 @@
 {% endset %}
 
 {% set appVersionHtml %}
-<p>Version {{appVersion}}</p>
+<p>Version: v{{appVersion}}</p>
 {% endset %}
 
 {% block header %}
