--- a/src/views/layout/default.njk
+++ b/src/views/layout/default.njk
@@ -75,11 +75,11 @@
 
     <div class="govuk-grid-col login">
       {% if user %}
-        <p>Welcome {{ user.email }}</p>
-        <a href={{logOutPath}} class="govuk-link">Logout</a>
+        <p class="govuk-body-m">Welcome, {{ user.email }}</p>
+        <a href={{logOutPath}} class="govuk-link govuk-body-m">Logout</a>
       {% else %}
-        <p>Welcome Guest</p>
-        <a href="" class="govuk-link">Login</a>
+        <p class="govuk-body-m">Welcome, Guest</p>
+        <a href="" class="govuk-link govuk-body-m">Login</a>
       {% endif %}
     </div>
   </header>
