--- a/src/views/layout/default.njk
+++ b/src/views/layout/default.njk
@@ -43,6 +43,7 @@
 {% block header %}
   <script>
     var gtmIdValue = "{{gtmId}}";
+    var isAppLocal = "{{isAppLocal}}"
   </script>
   <script type="module" src="{{ assetPath }}/scripts/cookieScript.js"></script>
   <header class="header-container">
