--- a/src/views/screens/results/template.njk
+++ b/src/views/screens/results/template.njk
@@ -45,4 +45,6 @@
     <script type="module" src="{{ assetPath }}/scripts/location.js"></script>
     <script type="module" src="{{ assetPath }}/scripts/filters.js"></script>
     <script type="module" src="{{ assetPath }}/scripts/details.js"></script>
+    <script type="module" src="{{ assetPath }}/scripts/keywordsFilter.js"></script>
+    <script src="{{ assetPath }}/scripts/js/jquery.js"></script>
   {% endblock %}
