feat(frontend): implementing code review comments

--- a/src/views/layout/default.njk
+++ b/src/views/layout/default.njk
@@ -43,7 +43,7 @@
 {% block header %}
   <script>
     var gtmIdValue = "{{gtmId}}";
-    var isAppLocal = "{{isAppLocal}}"
+    var keyboardFiltersBaseUrlValue = "{{keyboardFiltersBaseUrl}}"
   </script>
   <script type="module" src="{{ assetPath }}/scripts/cookieScript.js"></script>
   <header class="header-container">
