--- a/src/views/screens/results/template.njk
+++ b/src/views/screens/results/template.njk
@@ -46,5 +46,6 @@
     <script type="module" src="{{ assetPath }}/scripts/filters.js"></script>
     <script type="module" src="{{ assetPath }}/scripts/details.js"></script>
     <script type="module" src="{{ assetPath }}/scripts/keywordsFilter.js"></script>
-    <script src="{{ assetPath }}/scripts/js/jquery.js"></script>
+    <script src="{{ assetPath }}/scripts/jquery.js"></script>
+    <script src="{{ assetPath }}/scripts/jquery-debounce.js"></script>
   {% endblock %}
