--- a/src/assets/sass/templates/_results.scss
+++ b/src/assets/sass/templates/_results.scss
@@ -624,19 +624,19 @@
   box-shadow: 0 2px 8px rgba(0, 0, 0, 0.2);
 }
 
-.filter-options__keyboard-filter-content ul {
-  list-style-type: none;
-  padding: 0;
-  margin: 0;
-}
-
-.filter-options__keyboard-filter-content ul li {
-  padding: 10px;
-  cursor: pointer;
-}
-
-.filter-options__keyboard-filter-content ul li:hover {
-  background-color: #f1f1f1;
+.filter-options__keyboard-filter-content {
+  & ul {  
+    list-style-type: none;
+    padding: 0;
+    margin: 0;
+    & li {
+      padding: 10px;
+      cursor: pointer;    
+    }
+    & li:hover {
+      background-color: #f1f1f1;
+    } 
+  }
 }
 
 .keywords-filter-dropdown {
