feat(frontend): implementing code review comments

--- a/src/assets/sass/templates/_results.scss
+++ b/src/assets/sass/templates/_results.scss
@@ -648,3 +648,7 @@
 .filter-options__keyword-filter {
   position: relative;
 }
+
+.govuk-font-family {
+  font-family: "GDS Transport", arial, sans-serif;
+}
