fix(auth): Remove custom logout handler, add user data as context to views
We do not need a custom logout handler if the DSP platform will
provide a redirect URI to send the user back to where the originally
logged out.

The user data is now also passed into each view using dynamic context.
This means each view does not need to explicitely pass the user
data into the view. The raw encoded JWT does need to be passed
into the view if it is required.

The tests broken by these changes have also been fixed.

IssueID #NCEA-135

--- a/src/views/layout/default.njk
+++ b/src/views/layout/default.njk
@@ -76,7 +76,7 @@
     <div class="govuk-grid-col login">
       {% if user %}
         <p class="govuk-body-m">Welcome, {{ user.email }}</p>
-        <a href={{logOutPath}} class="govuk-link govuk-body-m">Logout</a>
+        <a href="{{routes.logOut}}" class="govuk-link govuk-body-m">Logout</a>
       {% else %}
         <p class="govuk-body-m">Welcome, Guest</p>
         <a href="" class="govuk-link govuk-body-m">Login</a>
