feat(auth): Add login url
We had a demo of the new login with a redirect URI, so that has
been added. Once deploy logging in will redirect the user back to
where they logged in from.

IssueID #NCEA-135

--- a/src/views/layout/default.njk
+++ b/src/views/layout/default.njk
@@ -79,7 +79,7 @@
         <a href="{{routes.logOut}}" class="govuk-link govuk-body-m">Logout</a>
       {% else %}
         <p class="govuk-body-m">Welcome, Guest</p>
-        <a href="" class="govuk-link govuk-body-m">Login</a>
+        <a href="{{routes.logIn}}{% if not routes.logIn == "" %}?redirect_uri={{redirectUri}}{% endif %}" class="govuk-link govuk-body-m">Login</a>
       {% endif %}
     </div>
   </header>
