feat(auth): Implement logout system
It was recommended that we handle logging out ourselves, so this
introduces that feature. A new `/logout` endpoint has bee added
and the logout button makes a `GET` request to this, including a
`redirect_uri` query parameter which will redirect the user back
to the page they logged out from.
It removes the cookie from the browser so they appear logged out.

This also fixes any respective tests.

IssueID #NCEA-135

--- a/src/views/layout/default.njk
+++ b/src/views/layout/default.njk
@@ -76,7 +76,7 @@
     <div class="govuk-grid-col login">
       {% if user %}
         <p class="govuk-body-m">Welcome, {{ user.email }}</p>
-        <a href="{{routes.logOut}}" class="govuk-link govuk-body-m">Logout</a>
+        <a href="{{routes.logOut}}?redirect_uri={{redirectUri}}" class="govuk-link govuk-body-m">Logout</a>
       {% else %}
         <p class="govuk-body-m">Welcome, Guest</p>
         <a href="{{routes.logIn}}{% if not routes.logIn == "" %}?redirect_uri={{redirectUri}}{% endif %}" class="govuk-link govuk-body-m">Login</a>
