feat(filters): Implement map filters
This commit adds the new filters into the map modal and makes them
functional. The behaviour is slightly different as the webpage
should not reload every time you change a filter, othwerwise it
would kick you out of the modal which is bad UX,  and instead it
should fetch and update the results in the background.
The filters are now saved when you exit the modal, so any filters
applied on the map stay applied when exiting the modal.

This also fixes any respective tests.

IssueID #NCEA-5

--- a/src/assets/sass/templates/_results.scss
+++ b/src/assets/sass/templates/_results.scss
@@ -167,8 +167,15 @@
   height: 100vh;
 }
 
+.filter-view-block-container {
+  height: 100vh;
+  overflow: hidden;
+}
+
 .filter-view-block {
-  width: 25%;
+  overflow: scroll;
+  height: 100%;
+  // width: 25%;
 }
 
 .defra-map {
@@ -625,17 +632,17 @@
 }
 
 .filter-options__keyboard-filter-content {
-  & ul {  
+  & ul {
     list-style-type: none;
     padding: 0;
     margin: 0;
     & li {
       padding: 10px;
-      cursor: pointer;    
+      cursor: pointer;
     }
     & li:hover {
       background-color: #f1f1f1;
-    } 
+    }
   }
 }
 
@@ -650,5 +657,5 @@
 }
 
 .govuk-font-family {
-  font-family: "GDS Transport", arial, sans-serif;
+  font-family: 'GDS Transport', arial, sans-serif;
 }
