--- a/src/views/partials/results/filters.njk
+++ b/src/views/partials/results/filters.njk
@@ -190,6 +190,6 @@
 
     <div class="govuk-!-margin-top-4 govuk-section-break--visible"></div>
 
-    <a href="{{dspFilterReset}}" class="filter-options__reset-link govuk-body-m">Reset Filters</a>
+    <a href="{{dspFilterReset}}" id="filter-options-reset-{{filterInstance}}" class="filter-options__reset-link govuk-body-m">Reset Filters</a>
   </section>
 </form>
