--- a/src/views/partials/results/summary.njk
+++ b/src/views/partials/results/summary.njk
@@ -12,32 +12,31 @@
   </h2>
   <div class="govuk-section-break--visible"></div>
   {% if not hasError %}
-    <div class='map-container {%if not searchResults.total %}disabled{% endif %}'>
+    <div class='map-container disabled' id="map-container">
       <div id="map-results-block">
         <button
           id='map-result-button'
           disabled="true"
           onclick="openMapModal()"
-          class='govuk-button govuk-button--map govuk-!-margin-bottom-0 spatial-data-button {% if not searchResults.total %}no-data{% endif %}'
+          class='govuk-button govuk-button--map govuk-!-margin-bottom-0 spatial-data-button no-data'
           data-module='govuk-button'
           >
-          {% if not searchResults.total %}
-            No spatial data to display.
-          {% else %}
-            View&nbsp;<span id="map-result-count"></span>&nbsp;results on a map
-            <svg
-              class='govuk-button__start-icon'
-              xmlns="http://www.w3.org/2000/svg"
-              width="16"
-              height="20"
-              viewBox="0 0 16 20"
-              fill="none">
-              <path
-                d="M14 6C14 2.69 11.31 0 8 0C4.69 0 2 2.69 2 6C2 10.5 8 17 8 17C8 17 14 10.5 14 6ZM6 6C6 4.9 6.9 4 8 4C9.1 4 10 4.9 10
-                  6C10 7.1 9.11 8 8 8C6.9 8 6 7.1 6 6ZM1 18V20H15V18H1Z"
-                fill="white"/>
-            </svg>
-          {% endif %}
+            <span id="no-spatial-data">No spatial data to display.</span>
+            <span id="view-results" class="display-none">
+              View&nbsp;<span id="map-result-count"></span>&nbsp;results on a map
+              <svg
+                class='govuk-button__start-icon'
+                xmlns="http://www.w3.org/2000/svg"
+                width="16"
+                height="20"
+                viewBox="0 0 16 20"
+                fill="none">
+                <path
+                  d="M14 6C14 2.69 11.31 0 8 0C4.69 0 2 2.69 2 6C2 10.5 8 17 8 17C8 17 14 10.5 14 6ZM6 6C6 4.9 6.9 4 8 4C9.1 4 10 4.9 10
+                    6C10 7.1 9.11 8 8 8C6.9 8 6 7.1 6 6ZM1 18V20H15V18H1Z"
+                  fill="white"/>
+              </svg>
+            </span>
         </button>
       </div>
     </div>
