--- a/src/views/screens/results/template.njk
+++ b/src/views/screens/results/template.njk
@@ -23,9 +23,19 @@
       </div>
       <div class="govuk-grid-row">
         <div class="govuk-grid-column-one-third">
-          <h2 class='govuk-heading-m filter-heading govuk-!-margin-bottom-2'>
-            Filters
-          </h2>
+          <div class="filters-heading">
+            <h2 class='govuk-heading-m filter-heading govuk-!-margin-bottom-2'>
+              Filters
+            </h2>
+            <div class="filters-buttons">
+              <button type="reset" class="govuk-button govuk-button--warning" data-module="govuk-button" form="filters-{{filterInstance}}" id="filters-reset-{{filterInstance}}" data-reset-url="{{dspFilterReset}}">
+                Clear Filters
+              </button>
+              <button type="submit" class="govuk-button" data-module="govuk-button" form="filters-{{filterInstance}}">
+                Apply Filters
+              </button>
+            </div>
+          </div>
           <div class="govuk-section-break--visible"></div>
           {% include 'partials/results/filters.njk' %}
         </div>
