fix(filters): Updated filter interface to store array of keywords instead of string
In order to more easily display the badges, and because the keyword
filter is now a dropdown that adds to a list, it makes more sense
for the filter interface to hold keywords in an array instead of
a string, and then splitting them later.

IssueID #NCEA-173

--- a/src/views/partials/results/filters.njk
+++ b/src/views/partials/results/filters.njk
@@ -154,8 +154,7 @@
       <div class="filter-options__filters--hidden filter-options__accordion-child" id="filters-keywords-filters-{{filterInstance}}">
         {{ govukInput({
           id: "keywords-"+filterInstance,
-          name: dspFilterNames.keywords,
-          value: dspFilterOptions.keywords
+          name: dspFilterNames.keywords
         }) }}
       </div>
       <div class="filter-options__keyboard-filter-content">
