feat(badges): Implement badges and badge styling
When a filter is applied a badge should be shown at the top of the
results so a user can clearly see the currently active filters.
This is especially important as the accordions close so they wont
be able to see the selected filters once the page has loaded.

Currently, the badges are added to the DOM and they have the same
styling as per DSP, but they do not yet function when you lick on
them. When clicked, they should remove the respective filter that
matches the badge that was clicked on.

IssueID #NCEA-173

--- a/src/views/partials/results/summary.njk
+++ b/src/views/partials/results/summary.njk
@@ -10,6 +10,9 @@
     {{ searchResults.total }} results{% if not searchResults.total %} found
     {% endif %}
   </h2>
+  <div class="badge-container">
+    {% include 'partials/results/badges.njk' %}
+  </div>
   <div class="govuk-section-break--visible"></div>
   {% if not hasError %}
     <div class='map-container disabled' id="map-container">
