feat(badges): Add badge interactivity
When a badge is clicked, it should be removed and it should clear/
toggle the respective filter. This adds that behaviour for any of
the filters kinds. It does not submit the form until the user opts
to, so removing the filter does not update the results.

IssueID #NCEA-173

--- a/src/views/partials/results/badges.njk
+++ b/src/views/partials/results/badges.njk
@@ -1,7 +1,7 @@
 {% from "macros/icons/icon.njk" import icon %}
 
 {% macro badge(badgeName, badgeValue, inputId) %}
-<button class="badge-button" data-input="filters-{{inputId}}-{{filterInstance}}">
+<button class="badge-button" data-input="filters-{{inputId}}-{{filterInstance}}" data-badge-button>
   {# `inputId` holds the id to the filter input that the badge is for #}
   <span class="govuk-font-family">{{ badgeName }}: {{badgeValue}}</span>
   {{ icon("cross", {
