--- a/src/assets/sass/templates/_results.scss
+++ b/src/assets/sass/templates/_results.scss
@@ -680,7 +680,7 @@
   gap: 0.5rem;
   border-radius: 0.5rem;
 
-  // only apply padding and margin if there are badges as childred
+  // only apply padding and margin if there are badges as children
   &:has(> .badge-button) {
     padding: 0.5rem;
     margin-bottom: 1rem;
