--- a/src/views/screens/results/template.njk
+++ b/src/views/screens/results/template.njk
@@ -54,6 +54,7 @@
     </script>
     <script type="module" src="{{ assetPath }}/scripts/location.js"></script>
     <script type="module" src="{{ assetPath }}/scripts/filters.js"></script>
+    <script type="module" src="{{ assetPath }}/scripts/badges.js"></script>
     <script type="module" src="{{ assetPath }}/scripts/details.js"></script>
     <script type="module" src="{{ assetPath }}/scripts/keywordsFilter.js"></script>
     <script src="{{ assetPath }}/scripts/jquery.js"></script>
