fix(badges): Use unordered list instead of divs
It is semantically better, and also better for accessibility to
use an unordered list for the list of badges, rather than just a
bunch of div's.

IssueID #NCEA-173

--- a/src/assets/sass/templates/_results.scss
+++ b/src/assets/sass/templates/_results.scss
@@ -683,6 +683,7 @@
 }
 
 .badge-container {
+  all: unset;
   background-color: #f3f2f1;
   display: flex;
   flex-wrap: wrap;
@@ -697,6 +698,7 @@
 
   // mostly copied from the core platform `.ag-tag-group button` styles
   .badge {
+    all: unset;
     border: 1px solid #000;
     border-radius: 0.25rem;
     box-shadow: #929191 0px 0px 0px;
