--- a/src/views/partials/results/summary.njk
+++ b/src/views/partials/results/summary.njk
@@ -12,9 +12,9 @@
   </h2>
   <section class="badge-section">
     <h3 class="govuk-heading-s govuk-!-margin-bottom-1">Applied Filters</h3>
-    <div class="badge-container">
+    <ul class="badge-container">
       {% include 'partials/results/badges.njk' %}
-    </div>
+    </ul>
   </section>
   <div class="govuk-section-break--visible"></div>
   {% if not hasError %}
